--- a/CryptoCoinic.Api.Data/Web.config
+++ b/CryptoCoinic.Api.Data/Web.config
@@ -5,10 +5,18 @@
   -->
 <configuration>
   <appSettings>
-    <add key="URI_MercadoBitcoin_DataApi" value="https://www.mercadobitcoin.net/api"/>      
+    <add key="URI_MercadoBitcoin_DataApi" value="https://www.mercadobitcoin.net/api" />
   </appSettings>
+  <!--
+    For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
+
+    The following attributes can be set on the <httpRuntime> tag.
+      <system.Web>
+        <httpRuntime targetFramework="4.8" />
+      </system.Web>
+  -->
   <system.web>
-    <compilation debug="true" targetFramework="4.6" />
+    <compilation debug="true" targetFramework="4.8" />
     <httpRuntime targetFramework="4.6" />
   </system.web>
   <system.webServer>
@@ -35,6 +43,10 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-13.0.0.0" newVersion="13.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
