--- a/CryptoCoinic.View.WindowsForms/App.config
+++ b/CryptoCoinic.View.WindowsForms/App.config
@@ -1,11 +1,24 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
     </startup>
-  <appSettings>
-    <add key="URI_MercadoBitcoin_DataApi" value="https://www.mercadobitcoin.net/api"/>
-
-    <add key="AutoStart" value="true"/>
+  <appSettings>    
+    <add key="Binance_URI_DataApi" value="https://data-api.binance.vision" />
+    <add key="Binance_Currency" value="USD" />
+    
+    <add key="AutoStart" value="true" />
   </appSettings>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-13.0.0.0" newVersion="13.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
